--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
-	background: url("./bg.jpg");
+	background: url("./bg.jpg"),url("./bg2.jpg");
 	background-size: cover;
 	
 }
